# Haskell-PDB-Utilities

./: IdealDesolvationCalcium.hs  Makefile  PDBtools.hs  README  calciumprobe.hs  pdbparse.hs  pdbtools.cabal  pdbutil.hs  vectors.hs
Experimental/: IdealDesolvationLithium.hs  calciumprobe.hs  sodiumprobe.hi  sodiumprobe.hs
PDBtools/: Base.hs  Residues.hs
PDBtools/PDButil/: PDBparse.hs  PDBparse.hs~  Vectors.hs  Vectors.hs~
PDButil/: PDBparse.hs  PDButil.hs  Residues.hs  Vectors.hs
Tests/: Test.hs
pdbtools/: pdbparse.hs  pdbutil.hs  vectors.hs
