Name:                PDBtools
Version:             0.0.1
License:             LGPL
License-file:        LICENSE
Cabal-Version:       >= 1.6
Author:              Grant Rotskoff
Maintainer:          gmr1887@gmail.com

Category:            Bioinformatics
Synopsis:            A library for analysis of 3-D protein coordinates
Description:         This is a collection of modules for the analysis of protein
                     coordinates. 
                     .
                     The Git repository is at: <https://rotskoff@github.com/rotskoff/Haskell-PDB-Utilities.git>.
Homepage:            http://www.github.com/rotskoff

Tested-With:         GHC==6.12.1
Build-Type:          Simple
Data-Files:          README, Makefile

Flag test
  Description:       Build testing software
  Default:           False

Flag examples
  Description:       Build example programs
  Default:           True

Library
  Build-Depends:     base>=4 && <5, binary >=0.4 && <0.5, tagsoup>=0.8, bytestring >= 0.9.1,
                     containers, array, parallel, parsec, mtl, directory, QuickCheck >= 2

  Exposed-modules:   PDBtools.pdbparse
                     PDBtools.pdbutil
                     PDBtools.vectors

  Extensions:        CPP, ParallelListComp
  if impl(ghc >= 6.12)
    Ghc-Options:       -Wall -O2 -fexcess-precision -funbox-strict-fields -auto-all -fno-warn-unused-do-bind
  else
    Ghc-Options:       -Wall -O2 -fexcess-precision -funbox-strict-fields -auto-all

Source-Repository head
  Type:           git
  Location:       https://rotskoff@github.com/rotskoff/Haskell-PDB-Utilities.git


extra-source-files:

flag tests
  default: False


library
  build-depends:
    base >3 && <5,
    bytestring,
    iteratee,
    iteratee-compress,
    transformers

  exposed-modules:
    Biobase.Fasta
    Biobase.Fasta.Import

  ghc-options:
    -O2 -funbox-strict-fields

executable Test
  build-depends:
  main-is:
    Tests/Test.hs
  ghc-options:
    -O2 -funbox-strict-fields -rtsopts
  if flag(tests)
    buildable:
      True
  else
    buildable:
      False

source-repository head
  type: git
  location: git://github.com/rotskoff/Haskell-PDB-Utilities.git
