Name:                PDBtools
Version:             0.0.1
License:             GPL-3
License-file:        LICENSE
Cabal-Version:       >= 1.6
Author:              Grant Rotskoff
Maintainer:          gmr1887@gmail.com

Category:            Bioinformatics
Synopsis:            A library for analysis of 3-D protein coordinates
Description:         This is a collection of modules for the analysis of protein
                     coordinates. 
                     .
                     The Git repository is at: <https://rotskoff@github.com/rotskoff/Haskell-PDB-Utilities.git>.
Homepage:            http://www.github.com/rotskoff

Tested-With:         GHC==6.12.1
Build-Type:          Simple
Data-Files:          README, Makefile

Flag test
  Description:       Build testing software
  Default:           False

Flag examples
  Description:       Build example programs
  Default:           True

Library
  Build-Depends:     base>=4 && <5, binary >=0.4 && <0.5, tagsoup>=0.8, bytestring >= 0.9.1,
                     containers, array, parallel, parsec, mtl, directory, QuickCheck >= 2

  Exposed-modules:   PDBtools.pdbparse
                     PDBtools.pdbutil
                     PDBtools.vectors
Source-Repository head
  Type:           git
  Location:       git://github.com/rotskoff/Haskell-PDB-Utilities.git




